<resources>

    // Resources for main Activity
    <string name="app_name">My BMI Application</string>
    <string name="bmi">YOUR_BMI_VALUE</string>
    <string name="calculate">Calculate</string>
    <string name="mass">Mass [in kg]</string>
    <string name="height">Height [in cm]</string>
    <string name="enter_height">Enter_your_height_here</string>
    <string name="enter_mass">Enter_your_mass_here</string>

    // Resources for returning Error
    <string name="empty_field_error">Empty_Field_Error</string>

    // Resources for BMI Types
    <string name="Underweight">Underweight</string>
    <string name="Normal">Normal</string>
    <string name="Overweight"> Overweight</string>
    <string name="Obesity_class_1">Obesity Class 1</string>
    <string name="Obesity_class_2">Obesity Class 2</string>
    <string name="Obesity_class_3">Obesity Class 3</string>

    // Add button for switch between Metric and Imperial
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="default_unit">@string/metric</string>
    <string name="mass_metric">mass_metric</string>
    <string name="mass_imperial">mass_imperial</string>
    <string name="height_metric">height_metric</string>
    <string name="height_imperial">height_imperial</string>

    // Add a Wiki Link
    <string name="more_information">Wikipedia for more information</string>
    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>




</resources>
